# copy_streamlit

./: .gitignore  app.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  tmp.py
docker/: copy_streamlit.dockerfile
tabs/: ctr_tab.py  mlm_tab.py
utils/: enum.py
