[tool.poetry]
name = "copy-streamlit"
version = "0.1.0"
description = ""
authors = ["sanjin-lebesgue <sanjin@lebesgue.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
altair = "4.2.1"
asttokens = "2.2.1"
attrs = "23.1.0"
backcall = "0.2.0"
bcrypt = "4.0.1"
blinker = "1.6.2"
cachetools = "5.3.1"
certifi = "2023.5.7"
charset-normalizer = "3.2.0"
click = "8.1.6"
cloudpickle = "2.2.1"
comm = "0.1.3"
contourpy = "1.1.0"
cycler = "0.11.0"
debugpy = "1.6.7"
decorator = "5.1.1"
entrypoints = "0.4"
executing = "1.2.0"
extra-streamlit-components = "0.1.56"
fonttools = "4.41.0"
gitdb = "4.0.10"
gitpython = "3.1.32"
idna = "3.4"
importlib-metadata = "6.8.0"
ipykernel = "6.24.0"
ipython = "8.14.0"
jedi = "0.18.2"
jinja2 = "3.1.2"
joblib = "1.3.1"
jsonschema = "4.18.4"
jsonschema-specifications = "2023.7.1"
jupyter-client = "8.3.0"
jupyter-core = "5.3.1"
kiwisolver = "1.4.4"
llvmlite = "0.40.1"
loguru = "0.7.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
matplotlib = "3.7.2"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
nest-asyncio = "1.5.6"
numba = "0.57.1"
numpy = "1.23.5"
packaging = "23.1"
pandas = "1.5.3"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "9.4.0"
platformdirs = "3.9.1"
prompt-toolkit = "3.0.39"
protobuf = "3.20.3"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "12.0.1"
pydeck = "0.8.0"
pygments = "2.15.1"
pyjwt = "2.8.0"
pympler = "1.0.1"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
pytz = "2023.3"
pyyaml = "6.0.1"
pyzmq = "25.1.0"
referencing = "0.30.0"
requests = "2.31.0"
rich = "13.4.2"
rpds-py = "0.9.2"
scikit-learn = "1.2.1"
scipy = "1.9.3"
semver = "3.0.1"
shap = "0.41.0"
six = "1.16.0"
slicer = "0.0.7"
smmap = "5.0.0"
stack-data = "0.6.2"
streamlit = "1.17.0"
streamlit-authenticator = "0.2.1"
streamlit-option-menu = "0.3.2"
threadpoolctl = "3.2.0"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.3.2"
tqdm = "4.64.1"
traitlets = "5.9.0"
typing-extensions = "4.7.1"
tzlocal = "5.0.1"
urllib3 = "2.0.4"
validators = "0.20.0"
watchdog = "3.0.0"
wcwidth = "0.2.6"
zipp = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
